# hwdetector

./: pyproject.toml  setup.py
debian/: changelog  control  copyright  rules  valentin.install
hwdetector.install/hwdetector/: Detector.py  __init__.py
hwdetector.install/hwdetector/modules/: llxhelpers.py  llxinitialization.py  llxldap.py  llxmounts.py  llxn4d.py  llxnethelpers.py  llxnetwork.py  llxnetworkresolver.py  llxnetworktest.py  llxnfs.py  llxprocess.py  llxservices.py  llxsysteminfo.py  llxsystemsw.py  llxsystemtest.py  llxtest.py  llxtests.py  llxtime.py  llxusers.py  llxuserstest.py  llxversion.py
hwdetector.install/hwdetector/utils/: PluginManager.py  __init__.py  log.py
valentin.install/usr/lib/valentin/: ruleset.py  varviewer.glade
